cambio de comunicacion de arduino

--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,23 @@ SESSION_SECRET=tu_clave_secreta_sesion_muy_segura_cambiar_en_produccion
 
 # Arduino API
 ARDUINO_API_KEY=tu_clave_api_para_arduino_cambiar_en_produccion
+
+# ============================================
+# MQTT Broker Configuration
+# ============================================
+# Broker público para desarrollo (cambiar en producción)
+MQTT_BROKER_URL=mqtt://broker.emqx.io:1883
+
+# Si usas un broker privado con autenticación:
+# MQTT_BROKER_URL=mqtt://tu-broker.com:1883
+# MQTT_USERNAME=tu_usuario
+# MQTT_PASSWORD=tu_password
+
+# Para broker local Mosquitto:
+# MQTT_BROKER_URL=mqtt://localhost:1883
+
+# Para EMQX local:
+# MQTT_BROKER_URL=mqtt://localhost:1883
+
+MQTT_USERNAME=
+MQTT_PASSWORD=
