--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "hbs": "^4.2.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "mqtt": "^5.14.1",
     "mysql2": "^3.6.5"
   },
   "devDependencies": {
