--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "mqtt": "^5.14.1",
-    "mysql2": "^3.6.5"
+    "mysql2": "^3.6.5",
+    "v-calendar": "^2.4.2"
   },
   "optionalDependencies": {
     "sequelize": "^6.37.7"
