--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -27,11 +27,13 @@
   },
   "homepage": "https://github.com/CQuiroz1404/sistema_de_riego_arduino#readme",
   "dependencies": {
+    "axios": "^1.13.2",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-rate-limit": "^8.2.1",
     "express-session": "^1.17.3",
     "express-validator": "^7.0.1",
     "fullcalendar": "^6.1.19",
@@ -40,12 +42,16 @@
     "morgan": "^1.10.0",
     "mqtt": "^5.14.1",
     "mysql2": "^3.6.5",
-    "v-calendar": "^2.4.2"
-  },
-  "optionalDependencies": {
-    "sequelize": "^6.37.7"
+    "sequelize": "^6.37.7",
+    "socket.io": "^4.8.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
+    "v-calendar": "^2.4.2",
+    "winston": "^3.18.3"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2"
+    "jest": "^30.2.0",
+    "nodemon": "^3.0.2",
+    "supertest": "^7.1.4"
   }
 }
