--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "@getbrevo/brevo": "^3.0.1",
     "axios": "^1.13.2",
+    "bcrypt": "^6.0.0",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -42,6 +43,7 @@
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "mqtt": "^5.14.1",
+    "multer": "^2.0.2",
     "mysql2": "^3.6.5",
     "sequelize": "^6.37.7",
     "socket.io": "^4.8.1",
