--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "test": "jest"
+    "test": "jest",
+    "dev:css": "tailwindcss -i ./src/styles/tailwind.css -o ./public/css/tailwind.css --watch",
+    "build:css": "tailwindcss -i ./src/styles/tailwind.css -o ./public/css/tailwind.css --minify"
   },
   "repository": {
     "type": "git",
@@ -53,8 +55,11 @@
     "winston": "^3.18.3"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.22",
     "jest": "^30.2.0",
     "nodemon": "^3.0.2",
-    "supertest": "^7.1.4"
+    "postcss": "^8.5.6",
+    "supertest": "^7.1.4",
+    "tailwindcss": "^3.4.14"
   }
 }
