--- a/package.json
+++ b/package.json
@@ -6,9 +6,32 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "test": "jest",
+    "test": "jest --verbose --coverage",
+    "test:watch": "jest --watch",
+    "test:unit": "jest tests/unit",
+    "test:integration": "jest tests/integration",
     "dev:css": "tailwindcss -i ./src/styles/tailwind.css -o ./public/css/tailwind.css --watch",
     "build:css": "tailwindcss -i ./src/styles/tailwind.css -o ./public/css/tailwind.css --minify"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "coverageDirectory": "./coverage",
+    "collectCoverageFrom": [
+      "src/**/*.js",
+      "!src/views/**",
+      "!src/config/swagger.js"
+    ],
+    "testMatch": [
+      "**/tests/**/*.test.js"
+    ],
+    "coverageThreshold": {
+      "global": {
+        "branches": 50,
+        "functions": 50,
+        "lines": 50,
+        "statements": 50
+      }
+    }
   },
   "repository": {
     "type": "git",
@@ -48,6 +71,7 @@
     "mqtt": "^5.14.1",
     "multer": "^2.0.2",
     "mysql2": "^3.6.5",
+    "node-cache": "^5.1.2",
     "sequelize": "^6.37.7",
     "socket.io": "^4.8.1",
     "swagger-jsdoc": "^6.2.8",
@@ -56,6 +80,7 @@
     "winston": "^3.18.3"
   },
   "devDependencies": {
+    "@jest/globals": "^30.2.0",
     "autoprefixer": "^10.4.22",
     "jest": "^30.2.0",
     "nodemon": "^3.0.2",
