--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "multer": "^2.0.2",
     "mysql2": "^3.6.5",
     "node-cache": "^5.1.2",
+    "node-cron": "^4.2.1",
     "sequelize": "^6.37.7",
     "socket.io": "^4.8.1",
     "swagger-jsdoc": "^6.2.8",
