--- a/.env.example
+++ b/.env.example
@@ -36,3 +36,55 @@ MQTT_BROKER_URL=mqtt://broker.emqx.io:1883
 
 MQTT_USERNAME=
 MQTT_PASSWORD=
+
+# ============================================
+# Scheduler Configuration
+# ============================================
+# Intervalo del scheduler de riego (formato cron)
+# Por defecto: cada minuto (* * * * *)
+# Ejemplos:
+#   */5 * * * * - Cada 5 minutos
+#   0 * * * * - Cada hora
+#   0 8,18 * * * - A las 8:00 y 18:00
+SCHEDULER_INTERVAL=* * * * *
+
+# ============================================
+# Logging Configuration
+# ============================================
+# Nivel de logging: error, warn, info, debug
+LOG_LEVEL=info
+
+# ============================================
+# Cache Configuration
+# ============================================
+# TTL (Time To Live) en segundos
+CACHE_DEVICE_TTL=300
+CACHE_SENSOR_TTL=60
+CACHE_CONFIG_TTL=600
+CACHE_USER_TTL=300
+
+# ============================================
+# OpenWeather API Configuration
+# ============================================
+# API Key de OpenWeather (opcional)
+OPENWEATHER_API_KEY=
+
+# Coordenadas para pronóstico del clima (por defecto Santiago, Chile)
+WEATHER_LAT=-33.4489
+WEATHER_LON=-70.6693
+
+# ============================================
+# Database Configuration
+# ============================================
+# Configuración avanzada de base de datos
+DB_RETRY_COUNT=5
+DB_RETRY_INTERVAL_MS=5000
+USE_SEQUELIZE=true
+DB_SYNC_ALTER=false
+SEQUELIZE_LOG=false
+
+# ============================================
+# Security
+# ============================================
+# CORS Origin (producción)
+CORS_ORIGIN=*
